@@ -87,9 +87,14 @@ module SchwerEngine
       # Maps & relatives
       require 'schwerengine/tile.rb'
       require 'schwerengine/map.rb'
+      require 'schwerengine/maploadstrategy.rb'
+      require 'schwerengine/xmlmaploadstrategy.rb'
+      require 'schwerengine/tiledmaploadstrategy.rb'
+      require 'schwerengine/map2.rb'
+      require 'schwerengine/map2loadstrategy.rb'
+      require 'schwerengine/tiledmap2loadstrategy.rb'
       # require 'schwerengine/location.rb'
       # require 'schwerengine/nullocation.rb'
-      require 'schwerengine/maploadstrategy.rb'
 
     end
   end
