@@ -1,12 +1,14 @@
-# tiledmap2loadstrategy.rb
-# igneus 2.10.2008
+# tiledmaploadstrategy.rb
+# igneus 14.12.2005
+
+require 'rexml/document'
 
 module SchwerEngine
 
-  # Loader class for loading Map2 (not Map!) from map file created
-  # by Tiled (http://mapeditor.org)
-
-  class TiledMap2LoadStrategy < Map2LoadStrategy
+  # LocationLoadStrategy which is able to load freeVikings maps 
+  # in native format of TilED editor (they usually have suffix .tmx).
+  
+  class TiledMapLoadStrategy < MapLoadStrategy
 
     def initialize(source)
       super(source)
@@ -16,102 +18,58 @@ module SchwerEngine
 
       @map_version = @doc.root.attributes['version']
       @log.info "Loading TilEd map version '#{@map_version}'"
+    end
 
-      @max_width = @max_height = 0
-
-      load
+    def load(blocks_matrix)
+      load_map_sizes
+      load_properties
+      load_tilesets
+      load_tiles blocks_matrix
     end
 
     private
-
-    def load
-      load_tile_sizes
-      load_tilesets
-      load_properties
-      load_tiles
-    end
 
     def load_tilesets
       @log.info "Loading tilesets."
 
       f = get_tileset_file
 
-      @tiletypes = [nil] # tile 0 is nil
+      @tiletypes = [Tile.new(nil, false)] # tile 0 is 'null tile'
 
       tileset_image = RUDL::Surface.load_new @dir+"/"+f
 
-      0.step(tileset_image.h - @tile_height, @tile_height) do |y|
-        0.step(tileset_image.w - @tile_width, @tile_width) do |x|
-          s = RUDL::Surface.new [@tile_width, @tile_height]
-          s.blit(tileset_image, [0, 0], [x, y, @tile_width, @tile_height])
-          @tiletypes.push s
+      0.step(tileset_image.h - @tile_size, @tile_size) do |y|
+        0.step(tileset_image.w - @tile_size, @tile_size) do |x|
+          s = RUDL::Surface.new [@tile_size, @tile_size]
+          s.blit(tileset_image, [0, 0], [x, y, @tile_size, @tile_size])
+          i = Image.wrap s
+          @tiletypes.push Tile.new(i, false)
         end
       end
     end
 
-    def load_tiles
+    def load_tiles(blocks)
       @log.info "Loading tiles."
 
-      # first get tile ids from every layer:
-
-      layers = []
-      layer_names = []
 
       @doc.root.each_element('layer') do |layer|
-        layers.push []
-        layer_names.push layer.attributes['name']
-
         layer_data = layer.elements['data']
-
-        map_sizes = [@max_width, @max_height]
-
         if layer_data.attributes['encoding'] then
           unless layer_data.attributes['encoding'] == 'base64'
             raise "Unsupported encoding '#{layer_data.attributes['encoding']}'.Play a bit with TilED setup to avoid layer data encoding."
           end
 
-          Base64LayerDataLoader.new(layers.last, layer, map_sizes).load
+          Base64LayerDataLoader.new(blocks, @tiletypes, 
+                                    layer, @properties).load
         else
-          ExpandedLayerDataLoader.new(layers.last, layer, map_sizes).load
+          ExpandedLayerDataLoader.new(blocks, @tiletypes,
+                                      layer, @properties).load
         end
       end
-
-      solid_layer = nil
-
-      # then find solid layer and fill @blocks:
-
-      layer_names.each_with_index {|name,i|
-        if name == @properties['solid_layer'] then
-          solid_layer = layers[i]
-          break
-        end
-      }
-
-      if solid_layer == nil then
-        @log.error "Solid layer not found. Highest layer is considered to be solid."
-        solid_layer = layers.last
-      end
-      
-      solid_layer.each do |row|
-        @blocks.push []
-        row.each do |tileid|
-          if tileid != 0 then
-            @blocks.last.push true
-          else
-            @blocks.last.push false
-          end
-        end
-      end
-
-      # create surface for every layer:
-
-      # find highest background surface; make just two: @background and 
-      # @foreground (or just @background if @foreground isn't needed)
-
 
       # I don't know why, but Tiled maps have the first row of tiles invisible.
       # This is a dirty trick to make it visible - add one row of empty tiles
-      @blocks.unshift( [false] * @max_width )
+      blocks.unshift( [Tile.new(nil,nil)] * @max_width )
       @max_height += 1
     end
 
@@ -119,9 +77,13 @@ module SchwerEngine
       @doc.root.elements['tileset'].elements["image"].attributes['source']
     end
 
-    def load_tile_sizes
-      @tile_width = @doc.root.attributes['tilewidth'].to_i
-      @tile_height = @doc.root.attributes['tileheight'].to_i
+    def load_map_sizes
+      if @doc.root.attributes['tilewidth'].to_i != Map::TILE_SIZE or
+          @doc.root.attributes['tileheight'].to_i != Map::TILE_SIZE then
+        raise "Tile size must be #{Map::TILE_SIZE}x#{Map::TILE_SIZE}px!"
+      end
+      
+      @tile_size = @doc.root.attributes['tilewidth'].to_i
 
       @max_width = @doc.root.attributes['width'].to_i
       @max_height = @doc.root.attributes['height'].to_i
@@ -153,6 +115,11 @@ module SchwerEngine
         @log.warn "Map has no properties."
       end
 
+      # Properties are also used as data packets given to the DataLoaders.
+      # Let's add some more essential map characteristics:
+      @properties['map_width'] = @max_width
+      @properties['map_height'] = @max_height
+
       # This property is very important and if it isn't provided, we must
       # provide it ourselves. Let's presume that the highest layer is the solid
       # one:
@@ -176,26 +143,30 @@ module SchwerEngine
     # to hack a bit around TilED data loading.
 
     class LayerDataLoader
-
-      # blocks_matrix:: Array which will be filled with Arrays of tile ids
-      # layer:: REXML::Element
-      # map_size:: [width, height]
-      def initialize(blocks_matrix, layer, map_size)
+      def initialize(blocks_matrix, blocktypes, layer, map_properties)
         @log = Log4r::Logger['location loading log']
 
         @blocks = blocks_matrix
+        @blocktypes = blocktypes
         @layer = layer
 
         @current_row = nil
 
-        @max_width = map_size[0]
-        @max_height = map_size[1]
+        @map_properties = map_properties
 
-        unless (@max_width.is_a?(Integer) && @max_height.is_a?(Integer))
-          raise ArgumentError, "Bad Array of layer sizes: [#{map_size.join(',')}]"
-        end
-
+        @max_width = map_properties['map_width'].to_i
+        @max_height = map_properties['map_height'].to_i
         @tile_index = -1 # index of the last inserted tile
+
+        # flag which says if matrix @blocks contains any tiles from past
+        # (it would mean we are loading second, third, or ... layer)
+        @blocks_prefilled = blocks_matrix.empty? ? false : true
+
+        if @map_properties['solid_layer'] == @layer.attributes['name'] then
+          @log.debug "Solid layer #{@map_properties['solid_layer']}"
+          # create solid tiles and add them into @blocktypes:
+          @blocktypes = [@blocktypes[0]].concat(@blocktypes[1..@blocktypes.size-1].collect {|tile| tile.to_solid })
+        end
       end
 
       private
@@ -208,15 +179,27 @@ module SchwerEngine
       def put_tile(tile_code)
         @tile_index += 1
 
-        if (@tile_index % @max_width) == 0 then
-          @current_row = []
-          @blocks.push(@current_row)
-        end
-        begin
-          @current_row.push tile_code
-        rescue RangeError => e
-          @log.error "Tile with code #{tile_code} caused RangeError: "+e.message+" Once I got this error when I forgot to switch off gzip compression in Tiled!"
-          raise
+        if @blocks_prefilled then
+          row = @tile_index / @max_width
+          col = @tile_index % @max_width
+          tile = @blocktypes[tile_code]
+          unless tile.empty?
+            if @blocks[row][col].solid? then
+              tile = tile.to_solid
+            end
+            @blocks[row][col] = tile
+          end
+        else
+          if (@tile_index % @max_width) == 0 then
+            @current_row = []
+            @blocks.push(@current_row)
+          end
+          begin
+            @current_row.push @blocktypes[tile_code]
+          rescue RangeError => e
+            @log.error "Tile with code #{tile_code} caused RangeError: "+e.message+" Once I got this error when I forgot to switch off gzip compression in Tiled!"
+            raise
+          end
         end
       end
     end # class LayerDataLoader
@@ -231,10 +214,7 @@ module SchwerEngine
         # [Note: Decoding of Base64 is done by String#unpack.]
         data = text.strip.unpack('m')[0].split(//).collect {|s| s[0]}
 
-        @log.debug "Loading layer '#{@layer.attributes['name']}'"
-
-        num_tiles = data.size/4
-        @log.debug "#{self.class}: Map data: '#{num_tiles}' tiles (should be #{@max_width}x#{@max_height}=#{@max_width*@max_height})"
+        @log.info "#{self.class}: Map data '#{data.size/4}' tiles (#{data.size/4/@max_height}x#{data.size/4/@max_width})"
         
         0.upto(@max_height) do |row|
           0.upto(@max_width) do |col|
@@ -262,5 +242,5 @@ module SchwerEngine
         }
       end
     end # class ExpandedLayerDataLoader
-  end
-end
+  end # class TiledMapLoadStrategy
+end # module FreeVikings
